--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "^1.5.0",
     "core-js": "^3.6.4",
     "vue": "^2.6.11"
   },
@@ -18,6 +19,9 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
+    "scss-loader": "^0.0.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
